Fix button color in on dark mode devices

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@ h1 {
   @apply text-5xl sm:text-6xl md:text-7xl font-bold tracking-tighter text-zinc-300;
 }
 
+::selection {
+  background: #CE504B;
+}
+
 body {
   margin: 0;
   display: flex;
@@ -42,27 +46,16 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  @apply bg-zinc-300;
 }
+
 button:hover {
-  border-color: #646cff;
+  @apply border border-[#CE504B];
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
